--- a/fall/숙박안내.md
+++ b/fall/숙박안내.md
@@ -50,10 +50,6 @@ tilte:
 
 <br>
 
-<p class="h4">
-☞ 학술대회장 주변 호텔 리스트
-</p>
-
 <table>
   <thead>
     <tr>
@@ -104,10 +100,10 @@ tilte:
   </tbody>
 </table>
 <br>
-<br>
 <p>
-*그랜드하얏트호텔은 사전등록(결제)을 완료한 분들에게만 상기 가격으로 예약 가능하며 숙박 신청은 ~ 2022년 9월 30일(금)까지 호텔 예약신청서를 작성하여 학회 메일로 접수하여 주시면 됩니다.<br> 
-<a href="../file/그랜드하얏트_숙박예약 폼.docx" class="button" download>☞ 호텔예약 신청서 다운로드</a><br>
+*그랜드하얏트호텔 예약은 <a style="color: #7669eb;">10월 14일(금)</a>까지 학술대회 사전등록을 완료한 분에 한하여 가능합니다.<br>
+*예약을 원하시는 회원께서는 <a href="../file/그랜드하얏트_숙박예약_폼.docx" download>호텔예약신청서[다운로드]</a>를 작성하여 학회이메일(geoaidata@gmail.com)로 보내주시면 됩니다.<br>
+*예약확정은 학회에서 이메일을 보내드리니 이점 참조해주시면 감사하겠습니다.<br> 
 </p>
 
 <br>
