--- a/fall/특별세션.md
+++ b/fall/특별세션.md
@@ -41,7 +41,7 @@ tilte:
 <p>
 - 특별셰션 구성: 1세션당 논문 4~6편으로 구성<br>
 - 특별세션 비용: 학회 사무국으로 문의<br>
-- 신청방법: <a href="../file/특별세션신청서.hwp" download>특별세션 참가 신청서[다운로드]</a>를 작성하여 시스템에 파일을 업로드<br>
+- 신청방법: <a href="https://drive.google.com/uc?export=download&id=1F_PHL3lbaALKcAQinbjN0hf4mZrUrn3Y" target="_blank" download>특별세션 참가 신청서[다운로드]</a>를 작성하여 시스템에 파일을 업로드<br>
 <a href="https://naver.me/5x0Mn5vs" target="_blank" class="button">☞ 특별세션 온라인신청</a><br>
 
 <!-- <hr>
