--- a/fall/부스및지면광고.md
+++ b/fall/부스및지면광고.md
@@ -61,7 +61,7 @@ tilte:
 &ensp;1) 광고크기: A4 전면 칼라<br>
 &ensp;2) 부스 및 지면광고 운영기간: 11월 16-17일<br>
 &ensp;3) 광고파일 제출 기한: 8월 1일(월)-10월 21일(금)<br>
-&ensp;4) 신청 방법: <a href="https://drive.google.com/uc?export=download&id=140As23vy75FJbNTF-hIoF2rc8cNsR21Y" target="_blank" download>부스/지면광고 신청서[다운로드]</a>를 작성하여 사무국으로 송부<br>
+&ensp;4) 신청 방법: <a href="https://drive.google.com/uc?export=download&id=140As23vy75FJbNTF-hIoF2rc8cNsR21Y" target="_blank" download>부스/지면광고 신청서[다운로드]</a>를 작성하여 를 작성하여 사무국 이메일(geoaidata@gmail.com)로 보내주시거나 온라인신청 진행<br>
 <a href="https://naver.me/5Ildsv7s" target="_blank" class="button">☞ 부스/지면광고 온라인신청</a><br>
 &ensp;* 지면광고 파일을 시스템에 업로드해 주시거나 용량이 클 경우 geoaidata@gmail.com 으로 제출<br>
 
