--- a/fall/개요.md
+++ b/fall/개요.md
@@ -28,7 +28,7 @@ tilte:
 ※ 단, 사회적 거리두기 4단계의 경우에는 온라인으로 진행합니다.
 <br><br>
 <p>
-<a href="../file/GeoAI_추계학술대회_리플렛.pdf/" target="_blank" class="button">☞ 학술대회 리플렛</a><br>
+<a href="../fall/file/GeoAI_추계학술대회_리플렛.pdf/" target="_blank" class="button">☞ 학술대회 리플렛</a><br>
 </p>
 <hr>
 
