--- a/fall/선영.md
+++ b/fall/선영.md
@@ -39,8 +39,8 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../서울시립대"> 서울시립대학교 GARS랩 </a></li>
-    <li><a href="../지오빅데이터"> 지오빅데이터 오픈플랫폼 </a></li>
+    <li><a href="/서울시립대"> 서울시립대학교 GARS랩 </a></li>
+    <li><a src="../지오빅데이터"> 지오빅데이터 오픈플랫폼 </a></li>
     <li><a href="../선영"> ㈜선영종합엔지니어링 </a></li>
     <li><a href="../해양과학기술"> ㈜해양기술ENG </a></li>
   </ul>
